# s4u-StorageForYou

./: .env  Cargo.toml  README.md
src/: main.rs
src/auth/: mod.rs
src/database/: mod.rs
src/database/pg_admin4/: mod.rs
src/handlers/: list.rs  mod.rs  upload.rs
src/handlers/create_folder/: mod.rs
src/handlers/delete_file/: mod.rs
src/handlers/delete_file_from_folder/: mod.rs
src/handlers/delete_folder/: mod.rs
src/handlers/download_file/: mod.rs
src/handlers/list_file/: mod.rs
src/handlers/list_folder/: mod.rs
src/handlers/login_user/: mod.rs
src/handlers/register_user/: mod.rs
src/handlers/rename_folder/: mod.rs
src/handlers/restore_file/: mod.rs
src/handlers/restore_folder/: mod.rs
src/handlers/search_files_and_folders/: mod.rs
src/handlers/share_file/: mod.rs
src/handlers/share_folder/: mod.rs
src/handlers/space_checker/: mod.rs
src/handlers/storage_status/: mod.rs
src/handlers/trash_file/: mod.rs
src/handlers/trash_folder/: mod.rs
src/handlers/upload_file/: mod.rs
src/handlers/upload_folder/: mod.rs
src/models/: mod.rs
src/models/file_meta/: mod.rs
src/models/login_user/: mod.rs
src/models/register_user/: mod.rs
src/models/storage_status/: mod.rs
src/models/trash_meta/: mod.rs
src/utils/: init.rs  mod.rs
src/utils/init/: mod.rs
src/utils/jwt/: mod.rs
src/utils/size_checker/: mod.rs
uploads/aaa@gmail.com/trash/: .trash_meta.json  (+1 more)
uploads/sprsingh624@gmail.com/: 149c7ff0-2814-414b-be21-fb3df9be9964.xlsx  1d2bfb37-6c30-4506-bcb4-5af193990b4b.xlsx  8210ce02-cb58-43c1-9075-8331cffd4c6b.json
(+1 files in other folders)
