[package]
name = "file_storage_service"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.0"
actix-rt = "2.5"
actix-multipart = "0.4"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
mime = "0.3"
uuid = { version = "1.0", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.9"
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres"] }
argon2 = "0.5"
dotenv = "0.15.0"
dotenvy = "0.15.7"
